--- a/week1/index.html
+++ b/week1/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="ko">
 <head>
-
- <title>Hello</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index</title>
 </head>
-
 <body>
+    <div class="jhw">
+        <h1>저를 소개합니다.</h1>
+        <h2>정희원</h2>
+        <img src="jungheewonyy.jpg" alt="정희원 얼굴">
+        <p>
+            <ul>
+                <li>생년월일: 2004.12.23</li>
+                <li>가족관계: 무남독녀</li>
+                <li>
+                    학력:
+                    <ol>
+                        <li>부천서초등학교 졸업</li>
+                        <li>부천여자중학교 졸업</li>
+                        <li>부명고등학교 졸업</li>
+                        <li>
+                            홍익대학교 재학 중<br>
+                            소속: 공과대학 컴퓨터공학과 3학년
+                        </li>
+                    </ol>
+                 </li>
+                 <li>
+                    주 사용 언어: 
+                    <a href="/python.html">python</a>
+                 </li>
+                 <li>
+                    SNS:
+                    <ol>
+                        <li>
+                            <a href="https://www.instagram.com/jungheewonyy/" target="_blank" title="@jungheewonyy">정희원의 인스타그램</a>
+                         </li>
 
- <h1>신짱구</h1>
-
- <p>안녕하세요. 저는 떡잎마을에 사는 신짱구입니다. 5살이에요.</p>
-
-
- <h2>
-
- 가족 관계
-
- </h2>
-
- <p>엄마, <a href="/father.html">아빠</a>,
-
-    저, 동생. 그리고 흰둥이와 함께 살아요.</p>
-
+                    </ol>
+                 </li>
+            </ul>
+        </p>
 </body>
-
 </html>
