--- a/week1/index.html
+++ b/week1/index.html
@@ -28,7 +28,7 @@
                  </li>
                  <li>
                     주 사용 언어: 
-                    <a href="/python.html">python</a>
+                    <a href="python.html">python</a>
                  </li>
                  <li>
                     SNS:
