--- a/week1/python.html
+++ b/week1/python.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-
 <html lang="ko">
-
 <head>
-
- <title>Python</title>
-
+    <meta charset="UTF-8">
+    <title>Python</title>
 </head>
-
 <body>
+    <h1>파이썬(Python)이란?</h1>
 
- <h1>아빠 : 신형만</h1>
+    <h2>파이썬의 특징</h2>
+    <ul>
+        <li><strong>쉽고 간단해요!</strong> 다른 언어보다 문법이 쉬워서, 초보자도 쉽게 쓸 수 있어요.</li>
+        <li><strong>쓸 수 있는 곳이 많아요</strong> 웹 개발, 게임, 데이터 분석, 인공지능 등에 쓰여요.</li>
+    </ul>
 
- <p>여우같은 아내, 토끼같은 자식, 강아지를 위해 일하는 가장</p>
+    <h2>파이썬의 문법</h2>
+    <p>예시로 파이썬에서 문장을 출력하는 법을 알려드릴게요:</p>
+    <pre>
+print("Hello, World!")
+    </pre>
 
- <p>35세. 180cm A형</p>
-
- <p>회사원 - 떡잎상사 영업2과 계장</p>
-
- <p>자기소개 페이지로 돌아가기:
-    <a href="/index.html">자기소개 페이지</a>
- </p>
-
+    <p>자기소개 페이지로 돌아가기:
+        <a href="index.html">자기소개 페이지</a>
+    </p>
 </body>
-
 </html>
