--- a/week1/python.html
+++ b/week1/python.html
@@ -10,7 +10,7 @@
     <h2>파이썬의 특징</h2>
     <ul>
         <li><strong>쉽고 간단해요!</strong> 다른 언어보다 문법이 쉬워서, 초보자도 쉽게 쓸 수 있어요.</li>
-        <li><strong>쓸 수 있는 곳이 많아요</strong> 웹 개발, 게임, 데이터 분석, 인공지능 등에 쓰여요.</li>
+        <li><strong>쓸 수 있는 곳이 많아요!</strong> 웹 개발, 게임, 데이터 분석, 인공지능 등에 쓰여요.</li>
     </ul>
 
     <h2>파이썬의 문법</h2>
